--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "keywords": [
     "babel-plugin"
   ],
+  "scripts": {
+    "build": "npx babel src/index.js --out-file lib/index.js --presets=es2015"
+  }, 
   "dependencies": {
     "babel-runtime": "^6.22.0",
     "babel-plugin-syntax-jsx": "^6.8.0"
   },
   "devDependencies": {
-    "babel-helper-plugin-test-runner": "^6.22.0"
+    "babel-cli": "^6.26.0",
+    "babel-helper-plugin-test-runner": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
