--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "babel-plugin-transform-jsx-arrow",
   "version": "6.22.0",
   "description": "wrap jsx expression to ()=> expr",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "main": "lib/index.js",
   "keywords": [
     "babel-plugin"
